# fad

./: .gitignore  Cargo.toml  README.md
hack/fanotify-example/: README.md  fanotify_example.c  justfile
more-magic/: Cargo.toml  README.md  build.rs
more-magic/src/: file.c  lib.rs  process.h
src/: main.rs
